# napalm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CreatePrograms.cmake  generate_file.cmake.in  napalm-config.cmake.in  program_template.cpp.in  program_template.h.in
napalm/: context_manager.cpp  context_manager.h  device.h  napalm.cpp  napalm.h  program_manager.cpp  program_manager.h  program_store.cpp  program_store.h  program_template.cpp  program_template.h
napalm_CUDA/: CMakeLists.txt
napalm_CUDA/cmake/: napalm_CUDA-config.cmake.in
napalm_CUDA/include/napalm/cuda/: create.h  cuda_buffer.h  cuda_context.h  cuda_img.h  cuda_program.h
napalm_CUDA/src/: create.cpp  cuda_buffer.cpp  cuda_context.cpp  cuda_img.cpp  cuda_program.cpp  cuda_utils.cpp  cuda_utils.h
napalm_OpenCL/: CMakeLists.txt
napalm_OpenCL/cmake/: napalm_OpenCL-config.cmake.in
napalm_OpenCL/include/napalm/opencl/: cl_buffer.h  cl_img.h  cl_program.cpp  cl_program.h  create.h  opencl_context.h
napalm_OpenCL/src/: cl_buffer.cpp  cl_img.cpp  cl_program.cpp  cl_utils.cpp  cl_utils.h  create.cpp  opencl_context.cpp
samples/: simple.cl  simple.cpp  simple.cu
